fix: minor overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ body {
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+
+input[type='search'] {
+  -webkit-appearance: none;
 }
 
 code {
